--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "esbuild": "^0.21.3",
         "react-dom": "^18.3.1",
         "react-icons": "^5.2.1",
-        "tailwindcss": "^3.4.3"
+        "tailwindcss": "^3.4.3",
+        "zustand": "^4.5.2"
     }
 }
